--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/triangle_logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/triangle_logo_16.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/triangle_logo_32.png" />
+<link rel="icon" type="image/png" sizes="64x64" href="/triangle_logo_64.png" />
+<link rel="icon" type="image/png" sizes="192x192" href="/triangle_logo_192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
